# eoir

./: .gitignore  index.html  pyproject.toml
docs/: theory-of-operation.md
eoql/: __init__.py  builder.py
eoql/backends/: __init__.py
eoql/backends/sql/: __init__.py  postgres.py
eoql/diagnostic/: __init__.py  __main__.py  checks.py  cli.py  report.py  runner.py  types.py
eoql/executor/: __init__.py  postgres.py
eoql/ir/: __init__.py  model.py  serialize.py  validation.py
eoql/registry/: __init__.py  expectations.py  frames.py
eoql/schema/: __init__.py  tables.py
tests/: __init__.py  test_builder.py  test_diagnostic.py  test_integration.py  test_postgres_compiler_contract.py  test_prime_rule.py  test_registries.py  test_serialization.py
